# DJZ-Nodes

./: AnamorphicEffect.md  AnamorphicEffect.py  AspectSize.py  AspectSizeV2.py  BatchAlphaComposite.py  BatchOffset.py  BatchRangeInsert.py  BatchRangeSwap.md  BatchRangeSwap.py  BatchThief.md  BatchThief.py  BlackBarsV1.md  BlackBarsV1.py  BlackBarsV2.py  BlackBarsV3.py  BorderCompositeAlpha.py  BracketCleaner.py  CRT_Effect_v1.py  CaptionsToPromptList.py  CathodeRayEffect.py  ClassicFilmEffect.md  ClassicFilmEffect.py  CombineAudio.py  DJZ-Node-Examples-Kinescope-Effect-V1.json  DJZ-Nodes-Index.md  DJZColorWheel.py  DJZDatamoshV2.md  DJZDatamoshV2.py  DJZImageScaleToMegabytes.md  DJZImageScaleToMegabytes.py  DJZImageScaleToTotalPixels.py  DJZLoadLatent.py  DJZLoadLatentV2.md  DJZLoadLatentV2.py  DJZ_ParallaxV1.py  DatasetWordcloud.py  DeadPixelEffect.md  DeadPixelEffect.py  DepthBasedPixelization.py  DinskyPlus.py  (+173 more)
ScreenGen/: README.md  __init__.py  bounce.scg  matrix.scg  mazeV2.scg  pipes.scg  pipesV2.scg  plasma.scg  starfield.scg  toastersV2.scg
VIZ/: README.md  butterfly.viz  circular_wave.viz  fractal_pulse.viz  frequency_dots.viz  kaleidoscope_wave.viz  milkdrop_bars.viz  oscilloscope.viz  particle_storm.viz  plasma_wave.viz  spectrum.viz  spiral_analyzer.viz  starfield_pulse.viz  tunnel_beat.viz  vector_scope.viz  voiceprint_spectrogram.viz  wave_rings.viz
examples/: FFX-Fade-O-Rama.json  Zenkai-System.json
presets/: cassette.preset  film.preset  intercom.preset  phone.preset  radio.preset  readme.md  tv.preset  vinyl.preset  walkie_talkie.preset
(+373 files in other folders)
