[project]
name = "djz-nodes"
description = "AspectSize and other nodes"
version = "2.0.0"
license = {file = "LICENSE"}
dependencies = ["rtree", "trimesh", "wordcloud", "matplotlib"]

[project.urls]
Repository = "https://github.com/MushroomFleet/DJZ-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "driftjohnson"
DisplayName = "DJZ-Nodes"
Icon = ""
