[project]
name = "djz-nodes"
description = "AspectSize and 100 more nodes"
version = "2.2.2"
license = {file = "LICENSE"}
dependencies = ["rtree", "trimesh", "wordcloud", "matplotlib", "opencv-python", "pydub>=0.25.1", "ffmpeg-python>=0.2.0", "opensimplex", "moderngl"]

[project.urls]
Repository = "https://github.com/MushroomFleet/DJZ-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "driftjohnson"
DisplayName = "DJZ-Nodes"
Icon = ""
